Critical when destroying HdyWindow
Firstly there's
(epiphany:176): Gtk-CRITICAL **: 21:05:00.455: gtk_widget_destroy: assertion 'GTK_IS_WIDGET (widget)' failed
happening every time a HdyWindow
is closed. Can reproduce it for example by opening and closing the Cookies Dialog from the Privacy page.
Secondly there's
(epiphany:176): Handy-WARNING **: 21:04:57.347: 'action' is not a valid child type of 'HdyActionRow'
when opening Preferences.
@exalm
Edited by Alice Mikhaylenko