window-mixin: Implement destroy()

GtkContainer only automatically removes non-internal children, i.e. in case
of Hdy(Application)Window the child inside the HdyDeck, but leaves the deck
and the titlebar intact. This causes problems, remove them on destroy()
explicitly.

Fixes https://gitlab.gnome.org/GNOME/libhandy/-/issues/289

Signed-off-by: Alexander Mikhaylenko <alexm@gnome.org>